[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://assets/background/cloud2.png" type="Texture" id=4]
[ext_resource path="res://assets/background/cloud1.png" type="Texture" id=5]
[ext_resource path="res://scenes/UI.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/background/bg.png" type="Texture" id=7]

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Timer_game" type="Timer" parent="."]
process_mode = 0
wait_time = 10.0

[node name="Timer_pipes" type="Timer" parent="."]
process_mode = 0
wait_time = 4.0

[node name="UI" parent="." instance=ExtResource( 6 )]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer_bg" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 320, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer_bg"]
scale = Vector2( 0.312431, 0.312431 )
texture = ExtResource( 7 )
centered = false

[node name="ParallaxLayer_cloud_1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.6, 0.6 )
motion_mirroring = Vector2( 320, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer_cloud_1"]
scale = Vector2( 0.312431, 0.312431 )
texture = ExtResource( 5 )
centered = false

[node name="ParallaxLayer_cloud_2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.4, 0.4 )
motion_mirroring = Vector2( 320, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer_cloud_2"]
scale = Vector2( 0.312431, 0.312431 )
texture = ExtResource( 4 )
centered = false

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 139.373, 83.0157 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 320, 81 )
[connection signal="timeout" from="Timer_game" to="." method="_on_Timer_game_timeout"]
[connection signal="timeout" from="Timer_pipes" to="." method="_on_Timer_pipes_timeout"]
